--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <body class="container">
   <h1 class="header">Malwina Prutis</h1>
+<a href="https://malwinaprutis.github.io/Homepage-Malwina-Prutis/" target="_blank">Odwiedź moją stronę</a>
+  
   <img width="700" height="300" src="https://i.postimg.cc/mkK5JFzM/Malwina-Prutis-Muzyczna-Oprawa.webp" alt="Malwina Prutis">
   <img width="400" height="300" src="https://i.postimg.cc/Dfbkd2bs/maltanczyk-szczeniaczki-z-rodowodem-gotowe-do-kowary-570283794.jpg" alt="Hodowla Maltańczyków Kochające Serce">
   <h2 class="subHeader">Ulubione pasje</h2>
